# LittleHolland

./: CMakeLists.txt  README.md  deploy.sh  description  description~  networkconnection.cpp  networkconnection.h  plugin.cpp
Little Holland Daemon/: Makefile  Makefile~  daemon.py
Little Holland VST3/include/: plugin.h
Little Holland VST3/src/: NetworkConnection.cpp
